docs/.vuepress/public/k8s-practice/08-namespace.yaml
# Namespace 示例
apiVersion: v1
kind: Namespace
metadata:
  name: development

---
apiVersion: v1
kind: Namespace
metadata:
  name: production
